feat: implement profile-screen and style for mobile first

--- a/packages/client/src/App.css
+++ b/packages/client/src/App.css
@@ -36,3 +36,10 @@
     transform: rotate(360deg);
   }
 }
+
+main {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+}
