--- a/packages/client/src/App.css
+++ b/packages/client/src/App.css
@@ -50,7 +50,17 @@ main span {
   margin: 10px;
 }
 
-@media (max-width: 1280px) {
+@media (max-width: 1444px) {
+  main span {
+    font-size: 40px;
+  }
+
+  .menu-button-div {
+    visibility: hidden;
+  }
+}
+
+@media (max-width: 1024px) {
   main span {
     font-size: 40px;
   }
