--- a/packages/client/src/components/menu-languages/menuLanguages.css
+++ b/packages/client/src/components/menu-languages/menuLanguages.css
@@ -8,7 +8,8 @@
 
 .menu-languages-button .menu-languages-flag {
   border: 1px solid transparent;
-  width: 38px;
+  margin: -8px;
+  width: 32px;
 }
 
 .menu-languages-button .menu-languages-flag:hover {
