--- a/packages/client/src/pages/profile-screen/profileScreen.css
+++ b/packages/client/src/pages/profile-screen/profileScreen.css
@@ -7,7 +7,7 @@
   display: flex;
 }
 
-@media (max-width: 1444px) {
+@media (max-width: 1440px) {
   .profile-screen-div {
     align-items: center;
     display: flex;
@@ -30,27 +30,28 @@
   }
 
   .about-me-div .welcome-text {
-    color: #1d3971;
+    color: #8151ff;
     font-family: Antic;
-    font-size: 30px;
-    left: -40px;
+    font-size: 32px;
     margin-left: 10px;
     width: 200px;
     position: relative;
-    top: 30px;
+    top: -20px;
   }
 
   .about-me-div p {
-    color: rgb(59, 58, 58);
-    font-size: 25px;
-    left: 40px;
+    color: #1a1a1a;
+    font-size: 24px;
+    left: 80px;
     position: relative;
     width: 350px;
+    top: -60px;
   }
 
   .profile-image-div .profile-image {
-    border-radius: 130px 0 0 130px;
-    height: 300px;
+    border-radius: 100px 0 0 100px;
+    height: 190px;
+    width: 150px;
     position: relative;
   }
 
@@ -59,10 +60,17 @@
     width: 700px;
   }
 
+  .text-div {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+  }
+
   .text-div .about-me-text {
-    color: #525050;
+    color: #959191;
     font-family: Antic;
-    font-size: 30px;
+    font-size: 16px;
+    width: 300px;
   }
 }
 
