--- a/packages/client/src/components/menu-languages/menuLanguages.css
+++ b/packages/client/src/components/menu-languages/menuLanguages.css
@@ -15,3 +15,33 @@
 
 .menu-languages-button .menu-languages-flag:hover {
 }
+
+@media (max-width: 1280px) {
+  .menu-languages-button .menu-languages-flag {
+    width: 46px;
+  }
+}
+
+@media (max-width: 834px) {
+  .menu-languages-button .menu-languages-flag {
+    width: 46px;
+  }
+}
+
+@media (max-width: 768px) {
+  .menu-languages-button .menu-languages-flag {
+    width: 46px;
+  }
+}
+
+@media (max-width: 414px) {
+  .menu-languages-button .menu-languages-flag {
+    width: 38px;
+  }
+}
+
+@media (max-width: 360px) {
+  .menu-languages-button .menu-languages-flag {
+    width: 32px;
+  }
+}
