--- a/packages/client/src/index.css
+++ b/packages/client/src/index.css
@@ -1,5 +1,8 @@
 body {
+  border: 0;
   margin: 0;
+  padding: 0;
+
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -10,4 +13,47 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+@media (max-width: 1440px) {
+  body {
+    height: 800px;
+    width: 1440px;
+  }
+}
+
+@media (max-width: 1280px) {
+  body {
+    width: 1280px;
+  }
+}
+
+@media (max-width: 834px) {
+  body {
+    width: 834px;
+  }
+}
+
+@media (max-width: 768px) {
+  body {
+    width: 768px;
+  }
+}
+
+@media (max-width: 414px) {
+  body {
+    width: 414px;
+  }
+}
+
+@media (max-width: 390px) {
+  body {
+    width: 390px;
+  }
+}
+
+@media (max-width: 360px) {
+  body {
+    width: 360px;
+  }
 }
