--- a/packages/client/src/pages/profile-screen/profileScreen.css
+++ b/packages/client/src/pages/profile-screen/profileScreen.css
@@ -73,7 +73,7 @@
   }
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 1280px) {
   .profile-screen-div {
     align-items: center;
     display: flex;
@@ -136,6 +136,72 @@
     font-size: 24px;
     width: 500px;
     position: absolute;
+  }
+}
+
+@media (max-width: 834px) {
+  .profile-screen-div {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .profile-div {
+    display: flex;
+    justify-content: center;
+    flex-direction: row-reverse;
+  }
+
+  .profile-div .about-me-div {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    height: 300px;
+    justify-content: center;
+    width: 50%;
+  }
+
+  .about-me-div .welcome-text {
+    color: #8151ff;
+    font-family: Antic;
+    font-size: 28px;
+    left: -20px;
+    width: 150px;
+    position: relative;
+    top: 10px;
+  }
+
+  .about-me-div p {
+    font-size: 26px;
+    left: 55px;
+    position: relative;
+    width: 300px;
+    top: -30px;
+  }
+
+  .profile-image-div .profile-image {
+    border-radius: 100px 0 0 100px;
+    height: 250px;
+    position: relative;
+  }
+
+  .profile-screen-div .text-div {
+    padding: 5px;
+    width: 700px;
+  }
+
+  .text-div {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+  }
+
+  .text-div .about-me-text {
+    color: #959191;
+    font-family: Antic;
+    font-size: 24px;
+    width: 500px;
+    position: relative;
   }
 }
 
@@ -164,24 +230,24 @@
   .about-me-div .welcome-text {
     color: #8151ff;
     font-family: Antic;
-    font-size: 26px;
+    font-size: 28px;
     left: -20px;
     width: 150px;
     position: relative;
-    top: -35px;
+    top: 10px;
   }
 
   .about-me-div p {
-    font-size: 22px;
+    font-size: 26px;
     left: 55px;
     position: relative;
     width: 300px;
-    top: -70px;
+    top: -30px;
   }
 
   .profile-image-div .profile-image {
     border-radius: 100px 0 0 100px;
-    height: 190px;
+    height: 250px;
     position: relative;
   }
 
@@ -201,11 +267,11 @@
     font-family: Antic;
     font-size: 24px;
     width: 500px;
-    position: absolute;
+    position: relative;
   }
 }
 
-@media (max-width: 425px) {
+@media (max-width: 414px) {
   .profile-screen-div {
     align-items: center;
     display: flex;
@@ -231,7 +297,7 @@
     color: #8151ff;
     font-family: Antic;
     font-size: 26px;
-    left: -20px;
+    left: -10px;
     width: 150px;
     position: relative;
     top: -35px;
@@ -239,7 +305,7 @@
 
   .about-me-div p {
     font-size: 22px;
-    left: 55px;
+    left: 65px;
     position: relative;
     width: 300px;
     top: -70px;
@@ -249,7 +315,7 @@
     border-radius: 100px 0 0 100px;
     height: 220px;
     position: relative;
-    right: -90px;
+    right: -80px;
   }
 
   .profile-screen-div .text-div {
@@ -269,5 +335,140 @@
     font-size: 24px;
     width: 350px;
     position: absolute;
+  }
+}
+
+@media (max-width: 390px) {
+  .profile-screen-div {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .profile-div {
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+  }
+
+  .profile-div .about-me-div {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    height: 300px;
+    justify-content: center;
+    width: 50%;
+  }
+
+  .about-me-div .welcome-text {
+    color: #8151ff;
+    font-family: Antic;
+    font-size: 26px;
+    left: 50px;
+    width: 150px;
+    position: relative;
+    top: -35px;
+  }
+
+  .about-me-div p {
+    font-size: 22px;
+    left: 70px;
+    position: relative;
+    width: 200px;
+    top: -70px;
+  }
+
+  .profile-image-div .profile-image {
+    border-radius: 100px 0 0 100px;
+    height: 240px;
+    position: relative;
+    right: -100px;
+  }
+
+  .profile-screen-div .text-div {
+    padding: 5px;
+    width: 700px;
+  }
+
+  .text-div {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+  }
+
+  .text-div .about-me-text {
+    color: #959191;
+    font-family: Antic;
+    font-size: 24px;
+    width: 320px;
+    position: relative;
+    top: -50px;
+  }
+}
+
+@media (max-width: 360px) {
+  .profile-screen-div {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .profile-div {
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+  }
+
+  .profile-div .about-me-div {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    height: 300px;
+    justify-content: center;
+    width: 50%;
+  }
+
+  .about-me-div .welcome-text {
+    color: #8151ff;
+    font-family: Antic;
+    font-size: 26px;
+    left: 50px;
+    width: 150px;
+    position: relative;
+    top: -35px;
+  }
+
+  .about-me-div p {
+    font-size: 22px;
+    left: 70px;
+    position: relative;
+    width: 200px;
+    top: -70px;
+  }
+
+  .profile-image-div .profile-image {
+    border-radius: 100px 0 0 100px;
+    height: 300px;
+    position: relative;
+    right: -80px;
+  }
+
+  .profile-screen-div .text-div {
+    padding: 5px;
+    width: 700px;
+  }
+
+  .text-div {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+  }
+
+  .text-div .about-me-text {
+    color: #959191;
+    font-family: Antic;
+    font-size: 24px;
+    width: 300px;
+    position: relative;
   }
 }
