--- a/packages/client/src/components/menu-languages/menuLanguages.css
+++ b/packages/client/src/components/menu-languages/menuLanguages.css
@@ -16,32 +16,58 @@
 .menu-languages-button .menu-languages-flag:hover {
 }
 
+@media (max-width: 1440px) {
+  .menu-languages-button .menu-languages-flag {
+    width: 50px;
+    position: relative;
+    top: -80px;
+  }
+}
+
 @media (max-width: 1280px) {
   .menu-languages-button .menu-languages-flag {
-    width: 46px;
+    width: 50px;
+    position: relative;
+    top: -100px;
   }
 }
 
 @media (max-width: 834px) {
   .menu-languages-button .menu-languages-flag {
-    width: 46px;
+    width: 50px;
+    position: relative;
+    top: -70px;
   }
 }
 
 @media (max-width: 768px) {
   .menu-languages-button .menu-languages-flag {
-    width: 46px;
+    width: 50px;
+    position: relative;
+    top: -70px;
   }
 }
 
 @media (max-width: 414px) {
   .menu-languages-button .menu-languages-flag {
-    width: 38px;
+    width: 32px;
+    position: relative;
+    top: -10px;
+  }
+}
+
+@media (max-width: 390px) {
+  .menu-languages-button .menu-languages-flag {
+    width: 32px;
+    position: relative;
+    top: -10px;
   }
 }
 
 @media (max-width: 360px) {
   .menu-languages-button .menu-languages-flag {
     width: 32px;
+    position: relative;
+    top: -10px;
   }
 }
