--- a/packages/client/src/components/menu/menuComponent.css
+++ b/packages/client/src/components/menu/menuComponent.css
@@ -16,32 +16,58 @@
   color: black;
 }
 
+@media (max-width: 1440px) {
+  .menu-div .link {
+    font-size: 26px;
+    position: relative;
+    top: -130px;
+  }
+}
+
 @media (max-width: 1280px) {
   .menu-div .link {
     font-size: 26px;
+    position: relative;
+    top: -140px;
   }
 }
 
 @media (max-width: 834px) {
   .menu-div .link {
     font-size: 26px;
+    position: relative;
+    top: -130px;
   }
 }
 
 @media (max-width: 768px) {
   .menu-div .link {
     font-size: 26px;
+    position: relative;
+    top: -130px;
   }
 }
 
 @media (max-width: 414px) {
   .menu-div .link {
-    font-size: 22px;
+    font-size: 20px;
+    position: relative;
+    top: -115px;
+  }
+}
+
+@media (max-width: 390px) {
+  .menu-div .link {
+    font-size: 20px;
+    position: relative;
+    top: -115px;
   }
 }
 
 @media (max-width: 360px) {
   .menu-div .link {
     font-size: 20px;
+    position: relative;
+    top: -120px;
   }
 }
