--- a/packages/client/src/pages/profile-screen/profileScreen.css
+++ b/packages/client/src/pages/profile-screen/profileScreen.css
@@ -8,203 +8,140 @@
 }
 
 @media (max-width: 1440px) {
-  .terminal-div {
-    align-items: center;
-    display: flex;
-    flex-direction: column;
+  .terminal-div .text-terminal {
+    color: grey;
+    font-size: 32px;
+    left: 10px;
+    position: absolute;
+    top: 10px;
   }
 
-  .profile-div {
-    display: flex;
-    justify-content: center;
-    flex-direction: row-reverse;
-  }
-
-  .profile-div .about-me-div {
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    height: 300px;
-    justify-content: center;
-    width: 50%;
-  }
-
-  .about-me-div .welcome-text {
-    color: #8151ff;
-    font-family: Antic;
-    font-size: 26px;
-    left: -20px;
-    width: 150px;
+  .terminal-div .root,
+  .hashtag {
+    color: #458290;
+    font-size: 32px;
     position: relative;
-    top: -130px;
+    top: 0px;
   }
 
-  .about-me-div p {
-    font-size: 22px;
-    left: 55px;
+  .terminal-div .user {
+    color: #93418a;
+    font-size: 32px;
     position: relative;
-    width: 300px;
-    top: -170px;
+    top: 0px;
   }
 
-  .profile-image-div .profile-image {
-    border-radius: 100px 0 0 100px;
-    height: 190px;
+  .terminal-div .cursor {
+    animation: animate 1.2s linear infinite;
+    color: grey;
+    font-size: 32px;
     position: relative;
-    top: -100px;
+    top: 0;
   }
 
-  .terminal-div .text-div {
-    padding: 5px;
-    width: 700px;
-  }
+  @keyframes animate {
+    0% {
+      opacity: 0;
+    }
 
-  .text-div {
-    align-items: center;
-    display: flex;
-    justify-content: center;
-  }
-
-  .text-div .about-me-text {
-    color: #959191;
-    font-family: Antic;
-    font-size: 24px;
-    width: 500px;
-    position: relative;
-    top: -220px;
+    50% {
+      opacity: 0.7;
+    }
+    100% {
+      opacity: 0;
+    }
   }
 }
 
 @media (max-width: 1280px) {
-  .terminal-div {
-    align-items: center;
-    display: flex;
-    flex-direction: column;
+  .terminal-div .text-terminal {
+    color: grey;
+    font-size: 32px;
+    left: 10px;
+    position: absolute;
+    top: 10px;
   }
 
-  .profile-div {
-    display: flex;
-    justify-content: center;
-    flex-direction: row-reverse;
-  }
-
-  .profile-div .about-me-div {
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    height: 300px;
-    justify-content: center;
-    width: 50%;
-  }
-
-  .about-me-div .welcome-text {
-    color: #8151ff;
-    font-family: Antic;
-    font-size: 26px;
-    left: -20px;
-    width: 150px;
+  .terminal-div .root,
+  .hashtag {
+    color: #458290;
+    font-size: 32px;
     position: relative;
-    top: -80px;
+    top: 0px;
   }
 
-  .about-me-div p {
-    font-size: 22px;
-    left: 55px;
+  .terminal-div .user {
+    color: #93418a;
+    font-size: 32px;
     position: relative;
-    width: 300px;
-    top: -120px;
+    top: 0px;
   }
 
-  .profile-image-div .profile-image {
-    border-radius: 100px 0 0 100px;
-    height: 190px;
+  .terminal-div .cursor {
+    animation: animate 1.2s linear infinite;
+    color: grey;
+    font-size: 32px;
     position: relative;
-    top: -50px;
+    top: 0;
   }
 
-  .terminal-div .text-div {
-    padding: 5px;
-    width: 700px;
-  }
+  @keyframes animate {
+    0% {
+      opacity: 0;
+    }
 
-  .text-div {
-    align-items: center;
-    display: flex;
-    justify-content: center;
-  }
-
-  .text-div .about-me-text {
-    color: #959191;
-    font-family: Antic;
-    font-size: 24px;
-    width: 500px;
-    position: relative;
-    top: -150px;
+    50% {
+      opacity: 0.7;
+    }
+    100% {
+      opacity: 0;
+    }
   }
 }
 
 @media (max-width: 834px) {
-  .terminal-div {
-    display: flex;
-    flex-direction: column;
-  }
-
-  .profile-div {
-    display: flex;
-    justify-content: center;
-    flex-direction: row-reverse;
-  }
-
-  .profile-div .about-me-div {
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    height: 300px;
-    justify-content: center;
-    width: 50%;
-  }
-
-  .about-me-div .welcome-text {
-    color: #8151ff;
-    font-family: Antic;
-    font-size: 28px;
-    left: -20px;
-    width: 150px;
-    position: relative;
+  .terminal-div .text-terminal {
+    color: grey;
+    font-size: 32px;
+    left: 10px;
+    position: absolute;
     top: 10px;
   }
 
-  .about-me-div p {
-    font-size: 26px;
-    left: 55px;
+  .terminal-div .root,
+  .hashtag {
+    color: #458290;
+    font-size: 32px;
     position: relative;
-    width: 300px;
-    top: -30px;
+    top: 0px;
   }
 
-  .profile-image-div .profile-image {
-    border-radius: 100px 0 0 100px;
-    height: 250px;
+  .terminal-div .user {
+    color: #93418a;
+    font-size: 32px;
     position: relative;
+    top: 0px;
   }
 
-  .terminal-div .text-div {
-    padding: 5px;
-    width: 700px;
-  }
-
-  .text-div {
-    align-items: center;
-    display: flex;
-    justify-content: center;
-  }
-
-  .text-div .about-me-text {
-    color: #959191;
-    font-family: Antic;
-    font-size: 24px;
-    width: 500px;
+  .terminal-div .cursor {
+    animation: animate 1.2s linear infinite;
+    color: grey;
+    font-size: 32px;
     position: relative;
+    top: 0;
+  }
+
+  @keyframes animate {
+    0% {
+      opacity: 0;
+    }
+
+    50% {
+      opacity: 0.7;
+    }
+    100% {
+      opacity: 0;
+    }
   }
 }
 
@@ -255,207 +192,73 @@
 }
 
 @media (max-width: 414px) {
-  .terminal-div {
-    align-items: center;
-    display: flex;
-    flex-direction: column;
+  .terminal-div .text-terminal {
+    font-size: 18px;
+    left: 10px;
+    top: 30px;
   }
 
-  .profile-div {
-    display: flex;
-    justify-content: center;
-    flex-direction: row;
+  .terminal-div .root,
+  .hashtag {
+    font-size: 18px;
+    top: 0px;
   }
 
-  .profile-div .about-me-div {
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    height: 300px;
-    justify-content: center;
-    width: 50%;
+  .terminal-div .user {
+    font-size: 18px;
+    top: 0px;
   }
 
-  .about-me-div .welcome-text {
-    color: #8151ff;
-    font-family: Antic;
-    font-size: 26px;
-    left: -10px;
-    width: 150px;
-    position: relative;
-    top: -35px;
-  }
-
-  .about-me-div p {
-    font-size: 22px;
-    left: 65px;
-    position: relative;
-    width: 300px;
-    top: -70px;
-  }
-
-  .profile-image-div .profile-image {
-    border-radius: 100px 0 0 100px;
-    height: 220px;
-    position: relative;
-    right: -80px;
-  }
-
-  .terminal-div .text-div {
-    padding: 5px;
-    width: 700px;
-  }
-
-  .text-div {
-    align-items: center;
-    display: flex;
-    justify-content: center;
-  }
-
-  .text-div .about-me-text {
-    color: #959191;
-    font-family: Antic;
-    font-size: 24px;
-    width: 350px;
-    position: relative;
-    top: -100px;
+  .terminal-div .cursor {
+    font-size: 18px;
+    top: 0;
   }
 }
 
 @media (max-width: 390px) {
-  .terminal-div {
-    align-items: center;
-    display: flex;
-    flex-direction: column;
+  .terminal-div .text-terminal {
+    font-size: 18px;
+    left: 10px;
+    top: 30px;
   }
 
-  .profile-div {
-    display: flex;
-    justify-content: center;
-    flex-direction: row;
+  .terminal-div .root,
+  .hashtag {
+    font-size: 18px;
+    top: 0px;
   }
 
-  .profile-div .about-me-div {
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    height: 300px;
-    justify-content: center;
-    width: 50%;
+  .terminal-div .user {
+    font-size: 18px;
+    top: 0px;
   }
 
-  .about-me-div .welcome-text {
-    color: #8151ff;
-    font-family: Antic;
-    font-size: 26px;
-    left: 50px;
-    width: 150px;
-    position: relative;
-    top: -35px;
-  }
-
-  .about-me-div p {
-    font-size: 22px;
-    left: 70px;
-    position: relative;
-    width: 200px;
-    top: -70px;
-  }
-
-  .profile-image-div .profile-image {
-    border-radius: 100px 0 0 100px;
-    filter: drop-shadow(10px 10px 10px gray);
-    height: 240px;
-    position: relative;
-    right: -100px;
-  }
-
-  .terminal-div .text-div {
-    padding: 5px;
-    width: 700px;
-  }
-
-  .text-div {
-    align-items: center;
-    display: flex;
-    justify-content: center;
-  }
-
-  .text-div .about-me-text {
-    color: #959191;
-    font-family: Antic;
-    font-size: 24px;
-    width: 320px;
-    position: relative;
-    top: -50px;
+  .terminal-div .cursor {
+    font-size: 18px;
+    top: 0;
   }
 }
 
 @media (max-width: 360px) {
-  .terminal-div {
-    align-items: center;
-    display: flex;
-    flex-direction: column;
+  .terminal-div .text-terminal {
+    font-size: 14px;
+    left: 10px;
+    top: 30px;
   }
 
-  .profile-div {
-    display: flex;
-    justify-content: center;
-    flex-direction: row;
+  .terminal-div .root,
+  .hashtag {
+    font-size: 14px;
+    top: 0px;
   }
 
-  .profile-div .about-me-div {
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    height: 300px;
-    justify-content: center;
-    width: 50%;
+  .terminal-div .user {
+    font-size: 14px;
+    top: 0px;
   }
 
-  .about-me-div .welcome-text {
-    color: #8151ff;
-    font-family: Antic;
-    font-size: 26px;
-    left: 50px;
-    width: 150px;
-    position: relative;
-    top: -35px;
-  }
-
-  .about-me-div p {
-    font-size: 22px;
-    left: 70px;
-    position: relative;
-    width: 200px;
-    top: -70px;
-  }
-
-  .profile-image-div .profile-image {
-    border-radius: 100px 0 0 100px;
-    height: 300px;
-    position: relative;
-    right: -80px;
-    top: -50px;
-  }
-
-  .terminal-div .text-div {
-    padding: 5px;
-    width: 700px;
-  }
-
-  .text-div {
-    align-items: center;
-    display: flex;
-    justify-content: center;
-  }
-
-  .text-div .about-me-text {
-    color: #959191;
-    font-family: Antic;
-    font-size: 24px;
-    width: 300px;
-    position: relative;
-    top: -80px;
+  .terminal-div .cursor {
+    font-size: 14px;
+    top: 0;
   }
 }
